# FocusMochi

./: .gitignore  README.md  TODO.md  index.html  package-lock.json
docs/: INSTALL_WINDOWS.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/state/: mod.rs  pet_state.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/vision/: capture.rs  face.rs  focus.rs  mod.rs  processor.rs
src/components/CameraPreview/: CameraPreview.css  CameraPreview.tsx  index.ts
src/components/Pet/: MochiSvg.tsx  Pet.css  Pet.tsx  index.ts
src/stores/: petStore.ts
src/types/: index.ts
